--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^14.17.27",
     "@types/sharp": "^0.30.0",
     "@types/supertest": "^2.0.11",
+    "@types/validator": "^13.7.10",
     "aws-sdk": "^2.1009.0",
     "eslint-plugin-no-only-tests": "^2.6.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
